# RabbitCipher

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
.github/workflows/: MultPlatformCmake.yml
include/: Errors.hpp  FileHandler.hpp  KeyManager.hpp  Rabbit.hpp  RabbitManager.hpp
src/: Errors.cpp  KeyManager.cpp  Rabbit.cpp  RabbitManager.cpp
tests/: test_rabbit.cpp
